[gd_scene load_steps=2 format=3 uid="uid://f3d56ogcrxet"]

[ext_resource type="Script" uid="uid://e8casja7y875" path="res://scenes/battle_button.gd" id="1_goh4i"]

[node name="BattleButton" type="Button"]
custom_minimum_size = Vector2(542, 64)
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_goh4i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="BattleTitle" type="RichTextLabel" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=32]Test Battle"
fit_content = true
scroll_active = false

[connection signal="pressed" from="." to="." method="_on_pressed"]
